--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.11",
-    "ol": "^7.1.0",
     "@vcmap/core": "^5.0.0-rc.23",
+    "ol": "^7.1.0",
     "pinia": "^2.0.21",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
