--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vcmap/core": "^5.0.0-rc.23",
     "ol": "^7.1.0",
     "pinia": "^2.0.21",
+    "swiper": "^8.4.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
